--- a/DigCheckPro/DigCheckPro.csproj
+++ b/DigCheckPro/DigCheckPro.csproj
@@ -3,31 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
+  
   <ItemGroup>
-    <PackageReference Include="Microsoft.AppCenter" Version="1.6.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.6.0" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.6.0" />
+    <PackageReference Include="Microsoft.AppCenter" Version="1.6.1" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.6.1" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
+    <PackageReference Include="Xamarin.UITest" Version="2.2.4" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\DigCheckProTextResource.txt" />
     <EmbeddedResource Include="Resources\DigCheckProXmlResource.xml" />
     <EmbeddedResource Include="Resources\DigCheckProJsonResource.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Pages\HomePage.xaml.cs">
-      <DependentUpon>HomePage.xaml</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Pages\HomePage.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
