--- a/UWP/DigCheckPro.UWP.csproj
+++ b/UWP/DigCheckPro.UWP.csproj
@@ -89,6 +89,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.4" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
+    <PackageReference Include="Xamarin.UITest">
+      <Version>2.2.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
