--- a/iOS/DigCheckPro.iOS.csproj
+++ b/iOS/DigCheckPro.iOS.csproj
@@ -99,6 +99,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
+    <PackageReference Include="Xamarin.UITest">
+      <Version>2.2.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
